lint: fix sonar