@@ -1,7 +1,6 @@
 package com.ramiro.java17demo.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,6 +14,7 @@ import com.ramiro.java17demo.record.Produto;
 @RequestMapping("/home")
 public class HelloController {
 	
+	private static final String MSG_TA_BEM_BARATO = "Tá bem barato";
 
 	@GetMapping
 	public String home() {
@@ -27,18 +27,18 @@ public class HelloController {
 	public ResponseEntity<List<String>> produto() {
 		
 		List<Produto> produtos = List.of(
-				new Produto("Bolacha", "Tá bem barato"),
-				new Produto("Sabonete", "Tá bem barato"),
-				new Produto("Alho", "Tá bem barato"),
+				new Produto("Bolacha", MSG_TA_BEM_BARATO),
+				new Produto("Sabonete", MSG_TA_BEM_BARATO),
+				new Produto("Alho", MSG_TA_BEM_BARATO),
 				new Produto("Danone1", "Tá caro")
 				);
 		
 		List<String> produtosFiltrado = 
 		produtos.stream()
-			.map(produto -> produto.nome())
+			.map(Produto::nome)
 			.filter(nomeProduto -> !nomeProduto.equalsIgnoreCase("Pão"))
 			.map(String::toUpperCase)
-			.collect(Collectors.toList());
+			.toList();
 			
 			
 		return new ResponseEntity<>(produtosFiltrado, HttpStatus.OK);
